<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">





    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
           >

            <TextView
                android:id="@+id/login_welcome_title"
                style="@style/WelcomeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login_welcome_title" />

            <TextView
                android:id="@+id/login_welcome_subtitle"
                style="@style/WelcomeSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_welcome_title"
                android:text="@string/login_welcome_subtitle" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email_input_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/login_password_input_ly"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/login_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_input_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_above="@+id/login_log_in_btn"
                android:layout_marginTop="10dp">

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />

            </android.support.design.widget.TextInputLayout>

           <Button
               android:layout_marginTop="20dp"
               android:layout_alignParentBottom="true"
               android:id="@+id/login_log_in_btn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/login_log_in"
               style="@style/FloatingButton"
               />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <TextView
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_above="@+id/login_register_btn"
        android:textColor="@color/colorWhiteText"
        android:text="@string/login_register_dialog"
        android:id="@+id/login_register_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/login_register_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorWhiteText"
        />


</RelativeLayout>