<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/tv_bottom_sheet_heading"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/img_bttm_sheet_title"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp" />

    <TextView
        android:background="?android:selectableItemBackground"
        android:id="@+id/img_bttm_sheet_camera_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/ic_add_a_photo"
        android:drawableTint="@color/colorPrimaryText"
        android:gravity="start|center_vertical"
        android:text="@string/img_bttm_sheet_camera_opt"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp" />

    <TextView
        android:background="?android:selectableItemBackground"
        android:id="@+id/img_bttm_sheet_gallery_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/ic_image"
        android:drawableTint="@color/colorPrimaryText"
        android:gravity="start|center_vertical"
        android:text="@string/img_bttm_sheet_gallery_opt"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"

        android:layout_marginTop="8dp"
        android:background="@color/colorDivider" />

    <TextView
        android:background="?android:selectableItemBackground"
        android:id="@+id/img_bttm_sheet_delete_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/ic_delete"
        android:drawableTint="@color/colorPrimaryText"
        android:gravity="start|center_vertical"
        android:text="@string/img_bttm_sheet_delete_opt"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp" />

</LinearLayout>